style.css
/* Global */
body {
  font-size: 18px;
  font-family: "Roboto", sans-serif;
  margin: 0;
  padding: 0;
}

h1,
h2,
p,
ul {
  padding: 0;
  margin: 0;
}

* {
  box-sizing: border-box;
}

li {
  list-style-type: none;
}

/* Typography */

/* header */
.header,
.hero {
  background-color: #1f2937;
}

.title {
  text-decoration: none;
  color: #f9faf8;
  font-size: 24px;
  font-weight: 900;
}

.nav a {
  text-decoration: none;
}

.nav a,
.hero-desc {
  color: #e5e7eb;
  font-size: 18px;
}

/* hero */
.hero-title {
  font-size: 48px;
  font-weight: 900;
  color: #f9faf8;
}

.btn {
  background-color: #3882f6;
  color: #f9faf8;
  text-decoration: none;
  display: inline-block;
  font-weight: 500;
  font-size: 18px;
  padding: 8px 40px;
  border-radius: 10px;
  border: none;
}

/* info section */
h2 {
  font-size: 36px;
  font-weight: 900;
  color: #1f2937;
}

.info-list-desc {
  color: #6f7782;
}

/* Quote */
.quote-section {
  background-color: #e5e7eb;
}
.quote {
  font-size: 36px;
  font-style: italic;
  font-weight: 300;
  color: #1f2937;
}

.quote-source {
  color: #1f2937;
  font-weight: 500;
  font-size: 24px;
}

/* CTA section */
.cta-container {
  background-color: #3882f6;
  color: #e5e7eb;
}

.cta-title {
  font-size: 20px;
  font-weight: 700;
}

.cta-desc {
  font-size: 18px;
}

.btn-border {
  border: 2px solid #e5e7eb;
}

/* Footer */
.footer {
  background-color: #1f2937;
  color: #e5e7eb;
}

/* Layout */

.container {
  width: 1100px;
  margin: 0 auto;
}

.inner-container {
  width: 800px;
  margin: 0 auto;
}

/* Header */

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 24px 0;
}

.nav-list {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 32px;
}

/* Hero Section */
.hero-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 64px;
  padding: 96px 0;
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 12px;
}

.hero-text {
  flex: 1 1 0;
}
.hero-img {
  min-width: 0;
  flex: 1 1 0;
}

/* Info Container */
.info-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.info-img {
  width: 200px;
  height: 200px;
  object-fit: cover;
  border: 4px solid #3882f6;
  border-radius: 12px;
}

.info-section-title {
  padding-top: 48px;
}

.info-list {
  display: flex;
  justify-content: center;
  padding: 48px 0 120px;
  gap: 48px;
}

.info-list-item {
  display: flex;
  flex-direction: column;

  flex-basis: 200px;
  align-items: center;
  gap: 8px;
}
.info-list-desc {
  text-align: center;
}

/* Quote Container */
.quote-container {
  padding: 96px 0;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.quote-source {
  align-self: flex-end;
}
/* CTA container */
.ctacontent-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 200px;
  padding: 64px 0;
}

.cta-text {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 4px;
}

.cta-container {
  border-radius: 16px;
}

.cta-section {
  padding: 96px 0;
}

/*  */

